# bloop-python

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
bloop/: __init__.py  client.py  tracing.py
bloop/integrations/: __init__.py  anthropic.py  costs.py  openai.py
tests/: test_client.py  test_integrations.py  test_tracing.py
