[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bloop-sdk"
version = "0.2.0"
description = "Python SDK for bloop error observability"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["error-tracking", "observability", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/jaikoo/bloop-python"
Repository = "https://github.com/jaikoo/bloop-python"

[tool.hatch.build.targets.wheel]
packages = ["bloop"]
